# prompt-compose

./: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
project_docs/: prompts-design.md  prompts-ux.md
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: datadir.rs  dictate.rs  lib.rs  main.rs  net.rs  prompts.rs
src-tauri/src/dictate/: audio.rs  engine.rs  model.rs  state.rs
src-tauri/src/prompts/: appstate.rs  embed.rs  lexical.rs  state.rs  store.rs
src/lib/: api.ts  copy.ts  dictate.svelte.ts  prompts.svelte.ts  theme.ts  updater.svelte.ts
src/lib/attachments/: focusTrap.ts
src/lib/components/: PromptsView.svelte  SettingsModal.svelte  UpdateBanner.svelte
src/lib/components/prompts/: ComposeBox.svelte  DictatePopover.svelte  MatchPanel.svelte  ProjectContextMenu.svelte  ProjectTabs.svelte  SnippetModal.svelte  VariableFillList.svelte
src/lib/compose/: doc.ts  variables.ts
src/lib/prompts/: toasts.svelte.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
tests/: prompts_smoke.mjs
