[package]
name = "prompt-compose"
version = "0.3.0"
description = "Offline desktop manager for Markdown prompt snippets"
authors = ["zhangxingeng"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name
# unique so it wouldn't conflict with the bin name. This seems to be only an
# issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prompt_compose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Self-update: fetch a newer signed build from GitHub Releases and install it.
# `process` is only here for the post-install relaunch the updater needs.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
# The embedding cache: SQLite-backed vector store. "bundled" compiles SQLite
# from source into the binary (no system dependency).
rusqlite = { version = "0.40", features = ["bundled"] }
# Prompt Library semantic match: ONNX text embeddings.
# default-features OFF is load-bearing: the defaults statically link a ~15-30MB
# ONNX Runtime into every shipped binary. `ort-load-dynamic` instead loads
# libonnxruntime at runtime from a file the app downloads (pinned version +
# sha256) — non-users pay ~3-6MB of glue, not the runtime. No hf-hub/image
# features: model files are fetched by our own pinned-URL downloader, so their
# HTTP stacks would be dead weight.
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic"] }
# Direct dep only for `ort::init_from(<lib path>)` (fastembed doesn't re-export
# it). Same exact pin as fastembed's own requirement, so cargo unifies them into
# one crate; features are additive with fastembed's.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }
# Downloader for the model + ONNX Runtime artifacts.
ureq = "3"
# sha256 verification of every downloaded artifact BEFORE it is used or loaded —
# the runtime dylib especially is native code; a checksum mismatch deletes the
# file and reports error state, never loads.
sha2 = "0.10"
# Unpack the official Microsoft onnxruntime release archives (.tgz) to extract
# just the shared library.
flate2 = "1"
tar = "0.4"
# Dictation: SenseVoice-Small ASR via sherpa-onnx (k2-fsa), cpal for
# microphone capture. Unlike the fastembed/ort dynamic-load setup above,
# sherpa-onnx's build.rs resolves (and by default downloads) its own native
# library at `cargo build` time — there is no runtime-dlopen path for it, so
# no separate feature flag is needed here.
sherpa-onnx = "1"
cpal = "0.18"
# The SenseVoice release asset is a .tar.bz2 (unlike the ONNX Runtime's
# .tgz above), so it needs its own decompressor.
bzip2 = "0.6"

# Windows ships onnxruntime as a .zip instead of a .tgz.
[target.'cfg(windows)'.dependencies]
zip = { version = "4", default-features = false, features = ["deflate"] }

[dev-dependencies]
# Unique temp-dir names in the module tests.
uuid = { version = "1", features = ["v4"] }
